PIP-962 Add caching and option for retrieving the light weighted code systems